--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "@types/react-notifications-component": "^3.1.1",
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.4",
     "sass": "^1.62.1"
   }
 }
